Bug 158036 - FORMATTING: Incorrect SVG rendering of text in rotated shape when padding is applied
Summary: FORMATTING: Incorrect SVG rendering of text in rotated shape when padding is ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Vertical-Text regression-scaled-glyph-positions
  Show dependency treegraph
 
Reported: 2023-11-02 09:12 UTC by Lymperis Voudouris
Modified: 2025-11-24 09:17 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
File which exhibits the bug (14.74 KB, application/vnd.oasis.opendocument.text)
2023-11-02 09:13 UTC, Lymperis Voudouris
Details
Screenshot of the bug (19.69 KB, image/png)
2023-11-02 09:14 UTC, Lymperis Voudouris
Details
SVG file used (2.09 KB, image/svg+xml)
2023-11-02 09:14 UTC, Lymperis Voudouris
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lymperis Voudouris 2023-11-02 09:12:33 UTC
Description:
Text of rotated shapes will not render correctly if non-synchronized padding is applied to the SVG image (eg. only bottom or top padding), the text appears shifted. The effect is more pronounced when multiple rotated shapes are cascaded: there is an incremental shift of the text in each subsequent shape


Steps to Reproduce:
1.Insert an SVG image with rotated shapes with text
2.In image Properties->Borders uncheck "Synchronize"
2.Change the image bootom/top/left or right padding to eg. 0.10

Actual Results:
The shape's text is shifted (relative to its original position within the shape)

Expected Results:
The text should not shift relative to its original position


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.2.1 (X86_64) / LibreOffice Community
Build ID: 56f7684011345957bbf33a7ee678afaf4d2ba333
CPU threads: 12; OS: Linux 6.2; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Lymperis Voudouris 2023-11-02 09:13:49 UTC
Created attachment 190606 [details]
File which exhibits the bug
Comment 2 Lymperis Voudouris 2023-11-02 09:14:17 UTC
Created attachment 190607 [details]
Screenshot of the bug
Comment 3 Lymperis Voudouris 2023-11-02 09:14:50 UTC
Created attachment 190608 [details]
SVG file used
Comment 4 Xisco Faulí 2023-11-02 12:53:15 UTC
regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2022-08-16 23:39:53 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2022-08-18 20:30:33 +0200
commit 1fa731d03ba0f22cb9392a578124ea977eaab2e9 (patch)
tree fd415b74a5f728e0eb99eb25b552c248c80112e9
parent b72ebcf5b26ab2e54c5251c5c45e6d45cade9236 (diff)
tdf#150462 don't prescale dxarray before using DrawTextArray

Bisected with: bibisect-linux64-7.5

Adding Cc: to Caolán McNamara

The issue improved later on with

author	Caolán McNamara <caolanm@redhat.com>	2022-10-22 21:21:05 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2022-10-23 17:04:38 +0200
commit 698ba5fcd9f01f8f6e9f300d914d8538ad527219 (patch)
tree 75d0de359bd653fc29f2cd13d43ad1531fe13ead
parent f024738e2218ed67c1948a9aa6149084939a2a52 (diff)
tdf#151674 rotate text starting point
Comment 5 Justin L 2024-10-15 16:31:51 UTC
repro 25.2+
Comment 6 Commit Notification 2025-11-18 11:17:36 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8e764204b49d0be0742ccad68bc6d1e2b8726875

tdf#158036 Incorrect positioning of rotated SVG text when padding is applied

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-11-24 09:17:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/a253459637241a7cfedd44f67c249bbd4447d07c

tdf#158036 Incorrect positioning of rotated SVG text when padding is applied

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.