tdf#158036 Incorrect positioning of rotated SVG text when padding is applied

this path is no longer the default for gtk3 where the SDPR renderer is
the default so there:

export DISABLE_SYSTEM_DEPENDENT_PRIMITIVE_RENDERER=1

is needed, though it is still the default for the gen backend, so that
can be used too

Change-Id: If64b7805ee4987ceab5af99decdf755280270e02
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194079
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 8e764204b49d0be0742ccad68bc6d1e2b8726875)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194164
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>